<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ervand.voloappnotes.view.fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:id="@+id/lLayoutRegisterFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="16dp">


                <EditText
                    android:id="@+id/edtRegisterLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Login(Email)"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/edtRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnRegisterBtn"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/register"
            android:textColor="@color/textColor" />

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtGoLoginPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginLeft="10dp"
                android:textStyle="italic|bold"
                android:textSize="16sp"
                android:textColor="@color/colorBtnSave"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
